# decorrelate-grids

./: .flake8  .gitignore  README.md  environment.yml  environment_with_gmt.yml  linreg-grids.py  pyproject.toml  regression.py  setup.py
decorrelategrids/: __init__.py  cliwrapper.py  rollinglinreg.py
