[project]
name = "decorrelategrids"
version = "0.1.0"
description = "Given two 2D arrays, perform a windowed regression between the two, aimed at isolating the correlated and the non-correlated components"
readme = "README.md"
authors = [
    {name = "Alberto Pastorutti", email = "alberto.pastorutti@gmail.com"},
    {name = "Marco Bartola", email = "marco.bartola@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "netcdf4",
    "numpy",
    "scipy",
    "setuptools",
    "xarray",
]
license = "Apache-2.0"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/apasto/decorrelate-grids"

[project.scripts]
decorrelategrids = "decorrelategrids.__init__:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
